--- a/LoginAndRegister/WebContent/registration.css
+++ b/LoginAndRegister/WebContent/registration.css
@@ -2,3 +2,10 @@
 .falseInput {
  border-color: red;
 }
+body {
+	background-image: url("http://bigbackground.com/wp-content/uploads/2013/07/car-background-audi-600x450.jpg") no-repeat center center fixed;
+	-webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+    background-size: cover; 
+}
